# weatherbot

./: CMakeLists.txt  Readme.md
cache-forecast/: CMakeLists.txt  cache-forecast.cpp
common/: weatherbot.h
config/: config.json
emoticon-command/: CMakeLists.txt  emoticon-command.cpp
handler-cgi/: CMakeLists.txt  handler-cgi.cpp
handler-daemon/: CMakeLists.txt  Command.cpp  Connections.cpp  handler-daemon.cpp
handler-test/: CMakeLists.txt  handler-test.cpp
headers/: Command.hxx  Connections.hxx  GenericHandler.h  http.h  json_settings.h
need-command/: CMakeLists.txt  need-command.cpp
rest/: CMakeLists.txt  http.cpp  json_settings.cpp  rest.cpp  rest.h
scripts/: weatherbot.sh  weatherbot_download_forecast.sh
systemd/: weatherbot.service
utils/: CMakeLists.txt  daemon.cpp  daemon.h  utils.cpp  utils.h
weatherbot-cgi/: CMakeLists.txt  weatherbot-cgi.cpp
weatherbot-command/: CMakeLists.txt  weatherbot-command.cpp
weatherbot-daemon/: CMakeLists.txt  weatherbot-daemon.cpp
weatherbot-standalone/: CMakeLists.txt  standalone.cpp
